Added practice mode

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </div>
       
       <div id="openPop">
-        <a id="infoM">Info</a><a id="shareBtn" style="display:none;">Share</a>
+        <a id="infoM">Info</a><a id="shareBtn" style="display:none;">Share</a> <a id="practiceBtn" style="display:none;">Practice Mode</a>
       <div>
       <div id="info">
         <div class="modal__window">
