--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <script type="module" src="js/main.js" defer></script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta content="Skyblockle!" property="og:title" />
-  <meta content="A wordle-like game for Hypixel Skyblock!\nan you guess today's weapon?" property="og:description" />
+  <meta content="A wordle-like game for Hypixel Skyblock!<br>Can you guess today's weapon?" property="og:description" />
   <meta content="https://skyblockle.vercel.app/" property="og:url" />
   <meta content="https://skyblockle.vercel.app/img/favicon.png" property="og:image" />
   <meta content="#c9e0c9" data-react-helmet="true" name="theme-color" />
