--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <div class="cell title" id="item">Item</div>
       <div class="cell title" id="dmg"><img src="img/SkyBlock_icons_strength.png" height="20px"> Damage</div>
       <div class="cell title" id="str"><img src="img/SkyBlock_icons_strength.png" height="20px"> Strength</div>
-      <div class="cell title" id="tier"><b><span class="obf" id="o1">a</span> RARITY <span class="obf" id="o2">a</span></b></div>
+      <div class="cell title" id="tier"><b><span class="obf" id="o1">a </span> </b>&nbsp;&nbsp;<span class="bold">RARITY</span><b>&nbsp;&nbsp;<span class="obf" id="o2">a</span></b></div>
       <div class="cell title" id="type">Category</div>
       <div class="cell title" id="abil">Ability</div>
     </div>
