added first time popup and fixed bolding

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           </ul>
           <h2>Clarifications</h2>
           <ul>
-            <li>The only Categories included are <b>Sword</b>, <b>Bow</b>, <b>Longsword</b> and <b>Gauntlet.</b></li>
+            <li>The only Categories included are <span class="bold">Sword</span>, <span class="bold">Bow</span>, <span class="bold">Longsword</span> and <span class="bold">Gauntlet.</span></li>
             <li>Weapons with the "Wand" category (or "offensive wands") are <b><span class="red">not</span></b> included, since this category is mostly for support items. Skyblock is very inconsistent, so only wands in the "Sword" category are included.<br>(To see a list of weapons this excludes, check <a href="https://wiki.hypixel.net/Wands#All_Wands" target="_blank">here.</a>)</li>
             <li>Items who have damage stats but aren't considered weapons (Fishing rods, Pickaxes, Axes...) are <b><span class="red">not</span></b> included.</li>
             <li>Weapons that drop directly from dungeon clear enemies are <b><span class="red">not</span></b> included</li>
