Removed great spook sword, formatting on the info tab, made the suggestion box have text-align:left, increased obf speed

--- a/index.html
+++ b/index.html
@@ -63,13 +63,13 @@
             </ul>
             <h2>Clarifications</h2>
             <ul>
-              <li>The only Categories included are <span class="bold">Sword</span>, <span class="bold">Bow</span>, <span class="bold">Longsword</span> and <span class="bold">Gauntlet.</span></li>
+              <li>The only Categories included are <span class="bold">Sword</span>, <span class="bold">Bow</span>, <span class="bold">Longsword</span> and <span class="bold">Gauntlet</span>.</li>
               <li>Weapons with the "Wand" category (or "offensive wands") are <span class="red bold">not</span> included, since this category is mostly for support items. Skyblock is very inconsistent, so only wands in the "Sword" category are included.<br>(To see a list of weapons this excludes, check <a href="https://wiki.hypixel.net/Wands#All_Wands" target="_blank">here.</a>)</li>
               <li>Items who have damage stats but aren't considered weapons (Fishing rods, Pickaxes, Axes...) are <span class="red bold">not</span> included.</li>
-              <li>Weapons that drop directly from dungeon clear enemies are <span class="red bold">not</span> included</li>
-              <li>Skyblock versions of Vanilla weapons are <span class="red bold">not</span> included</li>
-              <li><span class="ability">Abilities</span> that aren't indicated by "<span class="ability">Ability: </span>" in the item's description are <span class="red bold">not</span> counted.</li>
-              <li><span class="ability">Abilities</span> without an activation, "On Shoot" or "On Hit" are all considered <b>passive</b> for consistency.<br>An exception to this are the Wither Blades, these are listed as <span class="bold">Right click.</span></li>
+              <li>Weapons that drop directly from dungeon clear enemies, <span class="bold">Daedalus Blade</span>, and <span class="bold">Great Spook Sword</span> are <span class="red bold">not</span> included, since they have 0 stats by default.</li>
+              <li>Skyblock versions of Vanilla weapons are <span class="red bold">not</span> included.</li>
+              <li><span class="ability">Abilities</span> that aren't indicated by "<span class="ability">Ability: </span>" in the item's description are <span class="red bold">not</span> counted.<br>An exception to this are the Wither Blades, these are listed as <span class="bold">Right click</span>.</li>
+              <li><span class="ability">Abilities</span> without an activation, "On Shoot" or "On Hit" are all considered <b>passive</b> for consistency.</li>
             </ul>
             <h2>Credit</h2>
             <ul>
