hopefully fixed discord embed

--- a/index.html
+++ b/index.html
@@ -7,11 +7,14 @@
   <link rel="stylesheet" href="css/styles.css">
   <script type="module" src="js/main.js" defer></script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta content="Skyblockle!" property="og:title" />
-  <meta content="A wordle-like game for Hypixel Skyblock!" property="og:description" />
-  <meta content="https://skyblockle.vercel.app/" property="og:url" />
-  <meta content="https://skyblockle.vercel.app/img/metabg.png" property="og:image" />
-  <meta content="#c9e0c9" data-react-helmet="true" name="theme-color" />
+  <meta property="og:title" content="Skyblockle!"/>
+  <meta property="og:description" content="A wordle-like game for Hypixel Skyblock!"/>
+  <meta property="og:url" content="https://skyblockle.vercel.app/"/>
+  <meta property="og:type" content="website" />
+  <meta property="og:image" content="https://skyblockle.vercel.app/img/metabg.png"/>
+  <meta property="og:image:width" content="1400"/>
+  <meta property="og:image:height" content="883"/>
+  <meta content="#c9e0c9" data-react-helmet="true" name="theme-color"/>
 </head>
 <body>
   <div class="bg-blur"></div>
