Trying with meta twitter:card

--- a/index.html
+++ b/index.html
@@ -11,9 +11,8 @@
   <meta property="og:description" content="A wordle-like game for Hypixel Skyblock!"/>
   <meta property="og:url" content="https://skyblockle.vercel.app/"/>
   <meta property="og:type" content="website" />
-  <meta property="og:image" content="https://skyblockle.vercel.app/img/metabg.png?v=3"/>
-  <meta property="og:image:width" content="1200"/>
-  <meta property="og:image:height" content="630"/>
+  <meta property="og:image" content="https://skyblockle.vercel.app/img/metabg.png?v=4"/>
+  <meta name="twitter:card" content="summary_large_image">
   <meta content="#c9e0c9" data-react-helmet="true" name="theme-color"/>
 </head>
 <body>
