--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Skyblockdle</title>
+  <title>Skyblockle</title>
   <link rel="icon" type="image/x-icon" href="img/favicon.png">
   <link rel="stylesheet" href="css/styles.css">
   <script type="module" src="js/main.js" defer></script>
