add a "Back" button to practice mode menu

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       </div>
         
         <div id="openPop">
-          <a id="infoM">Info</a><a id="shareBtn" style="display:none;">Share</a><a id="practiceBtn" style="display:none;">Practice Mode</a>
+          <a id="infoM">Info</a><a id="shareBtn" style="display:none;">Share</a><a id="practiceBtn" style="display:none;">Practice Mode</a><a id="practiceBackBtn" style="display:none;">Back</a>
         </div>
         <div id="info">
           <div class="modal__window">
